--- a/Symfony/assets/css/section/blog.less
+++ b/Symfony/assets/css/section/blog.less
@@ -45,7 +45,7 @@ section.blog{
         h1{
             color:white;
             font-size:70px;
-            font-family: 'Oleo Script Swash Caps', cursive;
+            font-family: @fancy_font;
             line-height:100px;
             margin-top:15px;
         }
