--- a/Symfony/assets/css/section/welcome.less
+++ b/Symfony/assets/css/section/welcome.less
@@ -32,7 +32,7 @@ section.welcome{
             height:250px;
             text-align:center;
             color:white;
-            font-family: 'Oleo Script Swash Caps', cursive;
+            font-family: @fancy_font;
             text-shadow: 2px 1px 2px darken(@firebrick, 10%);
             font-size:220px;
             line-height:180px;
@@ -88,7 +88,7 @@ section.welcome{
                 width:400px;
                 line-height:50px;
                 opacity:0;
-                font-family: 'Oleo Script Swash Caps', cursive;
+                font-family: @fancy_font;
                 .transform(~'translate(1000px,0)');
                 .transition(~'transform 1s cubic-bezier(.5,-0.5,.5,1.5)');
             }
