--- a/Symfony/templates/badbrowser.html.twig
+++ b/Symfony/templates/badbrowser.html.twig
@@ -2,11 +2,11 @@
 <!--[if IE]><html class="ie" lang="en"> <![endif]-->
 <!--[if !(IE)]><!--><html lang="en"> <!--<![endif]-->
     <head>
-        <title>{% block title %}BookStash | Fun & Fast Book Discovery{% endblock %}</title>
+        <title>{% block title %}Books to Love | Fun & Fast Book Discovery{% endblock %}</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700|Titillium+Web:400,700' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700|Titillium+Web:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="/css/badbrowser.css" />
 
         <script>
@@ -14,7 +14,7 @@
               (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
               m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
               })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    
+
               ga('create', '{{ gaq_id }}', 'booksta.sh');
               ga('send', 'pageview');
         </script>
