--- a/Symfony/templates/base.html.twig
+++ b/Symfony/templates/base.html.twig
@@ -1,5 +1,5 @@
-{% set _title %}{% block title %}Bookstash | Fun & Fast Book Discovery{% endblock %}{% endset %}
-{% set _description %}{% block description %}Booksta.sh is fun and modern book discovery{% endblock %}{% endset %}
+{% set _title %}{% block title %}Books to Love | Fun & Fast Book Discovery{% endblock %}{% endset %}
+{% set _description %}{% block description %}Books to Love is fun and modern book discovery{% endblock %}{% endset %}
 {% set _focus %}{% block focus %}{% endblock %}{% endset %}
 {% set _browse %}{% block browse %}{% endblock %}{% endset %}
 {% set _meta %}{% block meta %}{% endblock %}{% endset %}
@@ -25,6 +25,10 @@
         {{ _meta }}
 
         <link href='//fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700|Titillium+Web:400,700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Nanum+Pen+Script" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Kalam:400,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
         <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
@@ -117,7 +121,7 @@
             </div>
 
             <div class="topbar">
-                <span class="logo"><a href="/" title="Bookstash Home" >Booksta.sh</a></span>
+                <span class="logo"><a href="/" title="Books to Love Home" >Books to Love</a></span>
                 <div class="menu categories" data-bstsh-object="topMenu" data-menu-target=".dropdowns .menu.categories">
                     <div class="icon"><i class="fa fa-sitemap"></i></div>
                     <div class="label"><span>Browse</span></div></div>
@@ -289,11 +293,11 @@
                             </div>
                             <div class="tooltip bookstash">
                                 <div><div></div></div>
-                                Login or create a Booksta.sh account
+                                Login or create a Books to Love account
                             </div>
                         </div>
                         <div class="fauxtip">
-                            You can log in via Facebook, Google, or Bookstash
+                            You can log in via Facebook, Google, or Books to Love
                         </div>
 
                         <div class="locallog">
