--- a/Symfony/templates/default/about.html.twig
+++ b/Symfony/templates/default/about.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block title %}About Us{% endblock %}
-{% block description %}About Booksta.sh{% endblock %}
+{% block description %}About Books to Love{% endblock %}
 
 {% block focus %}
 <section class="about">
@@ -11,7 +11,7 @@
             <button class="close-focus close-button" data-bstsh-object="historyCloseButton"><i class="fa fa-times"></i></button>
 
             <div class="logo">
-                <h1>BookSta.sh</h1>
+                <h1>Books to Love</h1>
 
                 <p>
                     We believe that book discovery should not be boring!
@@ -32,8 +32,8 @@
             <img src="/img/photo/scott200.jpeg" height="100" width="100" />
             <div style="display:inline-block">
                 <p>
-                    Booksta.sh is created and solely operated by Scott Lindsey<br />
-                    <a href="mailto:scott@booksta.sh">Scott@BookSta.sh</a>
+                    Books to Love is created and solely operated by Scott Lindsey<br />
+                    <a href="mailto:scott@booksta.sh">Scott@BooksTo.Love</a>
                 </p>
             </div>
         </div>
