--- a/Symfony/templates/default/badbrowser.html.twig
+++ b/Symfony/templates/default/badbrowser.html.twig
@@ -6,7 +6,7 @@
         </div>
         <div class="home content">
             <h1>Sorry!</h1>
-            <h2>Booksta.sh only works with modern browsers</h2>
+            <h2>Books to Love only works with modern browsers</h2>
             <div class="browsers">
                 <div class="browser">
                     <a href="http://www.google.com/chrome">
