--- a/Symfony/templates/default/badbrowser_about.html.twig
+++ b/Symfony/templates/default/badbrowser_about.html.twig
@@ -6,7 +6,7 @@
         <div class="about content">
 
             <div class="logo">
-                <h1>BookSta.sh</h1>
+                <h1>Books to Love</h1>
             </div>
 
             <div class="more_content">
@@ -14,8 +14,8 @@
                     <img src="/img/photo/scott200.jpeg" height="100" width="100" />
                     <div style="display:inline-block">
                         <p>
-                            Booksta.sh is created and solely operated by Scott Lindsey<br />
-                            <a href="mailto:scott@booksta.sh">Scott@BookSta.sh</a>
+                            Books to Love is created and solely operated by Scott Lindsey<br />
+                            <a href="mailto:scott@booksta.sh">Scott@BooksTo.Love</a>
                         </p>
                     </div>
                 </div>
