--- a/Symfony/templates/default/privacy.html.twig
+++ b/Symfony/templates/default/privacy.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block title %}Privacy Policy{% endblock %}
-{% block description %}Booksta.sh's Privacy Policy{% endblock %}
+{% block description %}Books to Love's Privacy Policy{% endblock %}
 
 {% block focus %}
     <section class="privacy">
