--- a/Symfony/templates/email/base.html.twig
+++ b/Symfony/templates/email/base.html.twig
@@ -4,7 +4,7 @@
     <!-- this code is cribbed from the very useful http://htmlemailboilerplate.com/ -->
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=2.0"/>
-	<title>{{ subject|default('Booksta.sh') }}</title>
+	<title>{{ subject|default('Books to Love') }}</title>
 	<style type="text/css">
         *{
             font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
