--- a/Symfony/templates/email/registration_email.html.twig
+++ b/Symfony/templates/email/registration_email.html.twig
@@ -5,7 +5,7 @@
                 <td valign="top">
                 <table cellpadding="0" cellspacing="0" border="0" align="center" width="100%">
                     <tr>
-                        <td style="background-color:#444" height="50" colspan="3"><a href="http://{{ app.request.host }}/" title="Booksta.sh"><img valign="top" src="http://{{ app.request.host }}/img/email/bookstash.png" height="50" width="196" border="0" alt="Booksta.sh" style="background-color:#e64f48; color:white" /></a></td>
+                        <td style="background-color:#444" height="50" colspan="3"><a href="https://{{ app.request.host }}/" title="Books to Love"><img valign="top" src="https://{{ app.request.host }}/img/email/bookstolove.png" height="50" width="196" border="0" alt="Books to Love" style="background-color:#e64f48; color:white" /></a></td>
                     </tr>
                     <tr>
                         <td colspan="3">
@@ -22,7 +22,7 @@
                                 <font style="font-size:140%; font-weight:bold">Hello {{ user.firstName }},</font><br />
                                 <br />
                                 Hi {{ user.firstName }},<br />
-                                Thank you for registering with Bookstash!
+                                Thank you for registering with Books to Love!
                                 To activate your email address, just follow the link below: <br />
                                 <br />
                             </p>
@@ -33,7 +33,7 @@
                                 <br />
                                 <font style="font-size:120%; font-weight:bold">
                                 Thanks,<br />
-                                Bookstash</br></font>
+                                Books to Love</br></font>
                             </p>
                         </td>
                         <td width="10%"></td>
@@ -51,8 +51,8 @@
                     <font style="size:80%; line-height:1.8em;">
                         <center>
                             This email was sent to {{ user.email }} as part of user registration<br />
-                            &copy; Bookstash |
-                            <a href="http://{{ app.request.host }}/privacy">Privacy Policy</a>
+                            &copy; Books to Love |
+                            <a href="https://{{ app.request.host }}/privacy">Privacy Policy</a>
                         </center>
                     </font>
                     <br />
