--- a/Symfony/templates/registration/confirmed.html.twig
+++ b/Symfony/templates/registration/confirmed.html.twig
@@ -14,7 +14,7 @@
             <div class="welcome">
                 <h2>Welcome</h2><br />
                 <h2 class="middle">to</h2><br />
-                <h2>Booksta.sh!</h2>
+                <h2>Books to Love!</h2>
             </div>
             <a class="escape force-hide-on-browse" href="{{redirect}}"></a>
         </div>
