--- a/Symfony/templates/work/work.html.twig
+++ b/Symfony/templates/work/work.html.twig
@@ -329,7 +329,7 @@
 
     <div class="footer">
         <span>
-            Booksta.sh is copyright &copy;{{"now"|date('Y')}} Awesome Sauce Web Sites Incorporated.
+            Books to Love is copyright &copy;{{"now"|date('Y')}} Awesome Sauce Web Sites Incorporated.
             <div>
                 <a href="{{ path('about') }}">About</a> |
                 <a href="{{ path('blog') }}">Blog</a> |
