--- a/Symfony/assets/css/section/about.less
+++ b/Symfony/assets/css/section/about.less
@@ -32,7 +32,7 @@ section.about{
                 padding:20px 60px 40px 60px;
                 .border-radius(7px);
                 h1{
-                    font-family: 'Oleo Script Swash Caps', cursive;
+                    font-family: @fancy_font;
                     font-size:60px;
                 }
                 p{
