--- a/Symfony/assets/css/style.less
+++ b/Symfony/assets/css/style.less
@@ -39,6 +39,13 @@
 @brand_linkedin:#0977b6;
 @brand_bookstash:@firebrick;
 
+//@fancy_font: 'Nanum Pen Script', cursive;
+//@fancy_font: 'Covered By Your Grace', cursive;
+//@fancy_font: 'Kalam', cursive;
+//@fancy_font: 'Oleo Script Swash Caps', cursive;
+@fancy_font: 'Amatic SC', cursive;
+
+
 // - Mix-ins -------------------------------------------------------------------
 // https://github.com/dmitryf/elements/blob/master/elements.less */
 // http://css3.bradshawenterprises.com/which-vendor-prefixes-are-needed/
@@ -659,9 +666,8 @@ body[auth=anon] .trim .dropdowns .menu.user .shell .profile{
                     }
                 }
                 span.logo{
-                    font-family: 'Oleo Script Swash Caps', cursive;
+                    font-family: @fancy_font;
                     line-height:110px;
-                    font-weight:bold;
                     .firebrick-text-shadow();
                     font-size:80px;
                     color:white;
@@ -676,7 +682,7 @@ body[auth=anon] .trim .dropdowns .menu.user .shell .profile{
                 }
             }
         }
-    
+
         //--- User Menu -----
         .menu.user{
             top:-480px;
@@ -944,17 +950,17 @@ body[pagename=welcome] .trim{
         z-index:100;
         span.logo{
             display:inline-block;
-            font-size:32px;
+            font-size:36px;
             font-weight:bold;
             a{
-                width:140px;
+                width:160px;
                 background-color:@firebrick;
-                padding:0 28px 0 28px;
+                padding:0 28px 0 18px;
                 color:white;
                 display:inline-block;
-                font-family: 'Oleo Script Swash Caps', cursive;
+                font-family: @fancy_font;
                 text-shadow: 2px 1px 2px rgba(50, 50, 50, 1);
-                line-height:50px;
+                line-height:54px;
                 vertical-align:top;
                 margin-right:20px;
             }
@@ -1282,6 +1288,8 @@ body[pagename=welcome] .trim{
                             line-height:40px;
                             font-size:23px;
                             cursor:pointer;
+                            overflow:hidden;
+                            vertical-align:middle;
                         }
                         i.fa-facebook{
                             background-color:@brand_facebook;
@@ -1291,9 +1299,10 @@ body[pagename=welcome] .trim{
                         }
                         i.bookstash{
                             background-color:@firebrick;
-                            font-family: 'Oleo Script Swash Caps', cursive;
-                            font-weight:bold;
+                            font-family: @fancy_font;
                             font-style:normal;
+                            font-size:32px;
+                            line-height:40px;
                             .firebrick-text-shadow();
                         }
                         i:hover{
@@ -2068,7 +2077,7 @@ body {
                     line-height:30px;
                     padding: 15px 0 10px 20px;
                     a{
-                        font-family: 'Oleo Script Swash Caps', cursive;
+                        font-family: @fancy_font;
                         font-size:28px;
                         color:white;
                         text-shadow: 2px 1px 2px darken(@firebrick,10%);
@@ -2219,7 +2228,7 @@ body {
                     line-height:30px;
                     padding: 15px 0 10px 20px;
                     a{
-                        font-family: 'Oleo Script Swash Caps', cursive;
+                        font-family: @fancy_font;
                         font-size:28px;
                         color:white;
                         text-shadow: 2px 1px 2px darken(@firebrick,10%);
