--- a/Symfony/templates/admin/blog_index.html.twig
+++ b/Symfony/templates/admin/blog_index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin.html.twig' %}
 {% block title %}Admin{% endblock %}
-{% block description %}The Booksta.sh Blog{% endblock %}
+{% block description %}The Books to Love Blog{% endblock %}
 
 {% block focus %}
 <section class="admin">
