--- a/Symfony/templates/default/tos.html.twig
+++ b/Symfony/templates/default/tos.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 {% block title %}Terms of Service{% endblock %}
-{% block description %}Booksta.sh's Terms of Service{% endblock %}
+{% block description %}Books to Love's Terms of Service{% endblock %}
 
 {% block focus %}
     <section class="tos">
