--- a/Symfony/templates/email/resetting_email.email.twig
+++ b/Symfony/templates/email/resetting_email.email.twig
@@ -4,13 +4,13 @@
 {% autoescape false %}
 Hello {{ user.firstName }},
 
-Someone requested a password reset on your Bookstash Account.
+Someone requested a password reset on your Books to Love Account.
 You can reset your email by accessing {{ confirmationUrl }}
 
 If you did not request this password reset, don't worry. Your password is safe and you can disregard this email.
 
 Thanks,
-Bookstash
+Books to Love
 
 {% endautoescape %}
 {% endblock %}
