--- a/Symfony/templates/email/resetting_email.html.twig
+++ b/Symfony/templates/email/resetting_email.html.twig
@@ -5,7 +5,7 @@
                 <td valign="top">
                 <table cellpadding="0" cellspacing="0" border="0" align="center" width="100%">
                     <tr>
-                        <td style="background-color:#444" height="50" colspan="3"><a href="http://{{ app.request.host }}/" title="Booksta.sh"><img valign="top" src="http://{{ app.request.host }}/img/email/bookstash.png" height="50" width="196" border="0" alt="Booksta.sh" style="background-color:#e64f48; color:white" /></a></td>
+                        <td style="background-color:#444" height="50" colspan="3"><a href="https://{{ app.request.host }}/" title="Books to Love"><img valign="top" src="https://{{ app.request.host }}/img/email/bookstolove.png" height="50" width="196" border="0" alt="Books to Love" style="background-color:#e64f48; color:white" /></a></td>
 
                     </tr>
                     <tr>
@@ -22,7 +22,7 @@
                             <p style="margin:2em 2em;">
                                 <font style="font-size:140%; font-weight:bold">Hello {{ user.firstName }},</font><br />
                                 <br />
-                                Someone requested a password reset on your Bookstash Account.
+                                Someone requested a password reset on your Books to Love Account.
                                 To reset your password, please follow the link below: <br />
                                 <br />
                             </p>
@@ -55,7 +55,7 @@
                         <center>
                             This email was sent to {{ user.email }} per request<br />
                             &copy; Bookstash |
-                            <a href="http://{{ app.request.host }}/privacy">Privacy Policy</a>
+                            <a href="https://{{ app.request.host }}/privacy">Privacy Policy</a>
                         </center>
                     </font>
                     <br />
