too low footer being hidden

--- a/Symfony/assets/css/style.less
+++ b/Symfony/assets/css/style.less
@@ -2412,7 +2412,7 @@ body {
             }
             p{
                 display:inline-block;
-                padding:20px 40px;
+                padding: 20px 40px 100px 40px;
                 border-radius:20px;
                 margin-bottom:10px;
                 opacity:.8;
