--- a/Symfony/templates/blog/post.html.twig
+++ b/Symfony/templates/blog/post.html.twig
@@ -131,7 +131,7 @@
         </div>
 
         <div class="blog-footer">
-            Books to Love is copyright &copy;{{"now"|date('Y')}} Awesome Sauce Web Sites Incorporated.
+            Books to Love is copyright &copy;{{"now"|date('Y')}} Scott Lindsey
             <div>
                 <a href="{{ path('about') }}">About</a> |
                 <a href="{{ path('blog') }}">Blog</a> |
