--- a/Symfony/templates/default/about.html.twig
+++ b/Symfony/templates/default/about.html.twig
@@ -43,7 +43,7 @@
         </div>
 
         <div class="copyright">
-            Copyright &copy;{{"now"|date('Y')}} Awesome Sauce Web Sites Incorporated
+            Copyright &copy;{{"now"|date('Y')}} Scott Lindsey
         </div>
 
     </div>
