--- a/Symfony/templates/default/badbrowser_about.html.twig
+++ b/Symfony/templates/default/badbrowser_about.html.twig
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="copyright">
-                    Copyright &copy;2014 Awesome Sauce Web Sites Incorporated.
+                    Copyright &copy;{{"now"|date('Y')}} Scott Lindsey
                 </div>
             </div>
         </div>
