--- a/Symfony/templates/fragment/searchfooter.html.twig
+++ b/Symfony/templates/fragment/searchfooter.html.twig
@@ -1,4 +1,4 @@
 <div class="search-footer">
     <em>~ End of Results ~</em><br>
-    <p>Books to Love is Copyright &copy;{{"now"|date('Y')}} Awesome Sauce Labs</p>
+    <p>Books to Love is Copyright &copy;{{"now"|date('Y')}} Scott Lindsey</p>
 </div>
