--- a/Symfony/templates/blog/index.html.twig
+++ b/Symfony/templates/blog/index.html.twig
@@ -54,7 +54,7 @@
         {% endfor %}
 
         <div class="blog-footer">
-            Books to Love is copyright &copy;{{"now"|date('Y')}} Awesome Sauce Web Sites Incorporated.
+            Books to Love is copyright &copy;{{"now"|date('Y')}} Scott Lindsey
             <div>
                 <a href="{{ path('about') }}">About</a> |
                 <a href="{{ path('blog') }}">Blog</a> | 
