--- a/Symfony/assets/css/style.less
+++ b/Symfony/assets/css/style.less
@@ -1096,6 +1096,7 @@ body[pagename=welcome] .trim{
             top:-40px;
             height:40px;
             .tab{
+                overflow:hidden;
                 .noselect();
                 display:inline-block;
                 margin-left:10px;
